# system-integration

./: .env.example  .gitignore  README.md  azure.docker-compose.yml  docker-compose.caddy.yml  docker-compose.frontend.yml  docker-compose.yml  package-lock.json  package.json
apps/authentication-path/: .env.example  main.py  pyproject.toml
apps/authentication-path/config/: secrets.py
apps/authentication-path/model/: objects.py
apps/authentication-path/utility/: logger.py  rabbitmq.py  result.py
apps/email-service/: README.md  app.js  package-lock.json  package.json
apps/friend-path/: .env-template  app.js  package-lock.json  package.json  pnpm-lock.yaml  users.json
apps/frontend/: angular.json  package-lock.json  package.json  tsconfig.json
apps/graphql-api/: app.js  database.db  (+7 more)
apps/python-rabbitmq-test/: pyproject.toml  receive.py  send.py
apps/user-service/: .env.example  README.md  main.py  pyproject.toml  tests.py
apps/user-service/config/: database.py  secrets.py
apps/user-service/model/: BaseModel.py  Invite.py  User.py
apps/user-service/utility/: amqp.py  functions.py  rabbitmq.py  result.py  serializers.py
apps/user-service/wrapper/: auth_path.py  friend_path.py  partial_maker.py  wishes_service.py
apps/web-scraper/: .env.example  .gitignore  Dockerfile  main.py  products.db  pyproject.toml
apps/web-scraper/database/: database.py
apps/web-scraper/scripts/: cron-job  crontab.example  env-loader.sh.example  webscraper.sh
apps/web-scraper/utils/: config.py  database.py  sftp.py
docs/: choices.md  group-system-integration.postman_collection.json  how_to.md  overview_of_the_system.md  reflections_on_process.md
documentation/: choices.md  how_to.md  overview_of_the_system.md  reflections_on_process.md
email-integration/: .env.example  app.js  package-lock.json  package.json
friend-pane/: app.js  improvement-ideas.md  package-lock.json  package.json  users.json
(+146 files in other folders)
