[tool.poetry]
name = "authentication-path"
version = "0.1.0"
description = ""
authors = ["DryDish <57399961+DryDish@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "authentication_path"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.21.0"
uvicorn = "^0.19.0"
fastapi = "^0.87.0"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
