[tool.poetry]
name = "python-producer"
version = "0.1.0"
description = ""
authors = ["DryDish <57399961+DryDish@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_producer"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
