[tool.poetry]
name = "user-service"
version = "0.1.0"
description = "Service to manage Users"
authors = ["DryDish <57399961+DryDish@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.3.1"
peewee = "^3.15.4"
psycopg2-binary = "^2.9.5"
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
