[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["CristiPV <cristi.valentin29@gmail.com>"]
readme = "README.md"
packages = [{include = "web_scraper"}]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.28.1"
lxml = "^4.9.2"
pysftp = "^0.2.9"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
